# fdaa-running-data

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: analysis.ipynb  analysis_combined.ipynb  eda.ipynb  stats_analysis.ipynb  test.ipynb
processed/: JBM170_HR_Day1-21_P1.json  JBM170_HR_Day1-21_P2.json  JBM170_HR_Day1-21_P3.json  JBM170_HR_Day1-21_P4.json  JBM170_HR_Day1-21_P5.json  suspect_1.json  suspect_2.json  suspect_3.json  suspect_4.json  suspect_5.json  suspect_6.json
schema/: schema.json
src/: data_models.py  parser.py  parser_s2.py  parser_s3.py  save_processed.py  weather.py
src/baseline_data/: __init__.py  baseline_data_2.py  baseline_data_3.py  baseline_data_4.py
